# Examen_parcial_3

./: CMakeLists.txt  README.md  main.c
c_version/: Asistencia.c  Asistencia.h  Estudiantes.c  Estudiantes.h
cpp_version/: Asistencia.cpp  Asistencia.h  Estudiante.cpp  Estudiante.h  main.cpp  materias.h  tests.cpp  tests.h
